@@ -1,4 +1,4 @@
-.TH VIFM 1 "12 August 2024" "vifm 0.13"
+.TH VIFM 1 "20 August 2024" "vifm 0.13"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -1444,6 +1444,7 @@ These commands see '|' as part of their arguments even when it's escaped:
     :vnoremap
     :wincmd
     :windo
+    :wingo
     :winrun
 
 To be able to use another command after one of these, wrap it with the :execute
@@ -3257,6 +3258,21 @@ same as running Ctrl-W [count] {arg}.
 .TP
 .BI ":windo [command...]"
 execute command for each pane (same as :winrun % command).
+.TP
+.BI "                                         :wingo"
+.TP
+.BI ":wingo {id} [{substr}]"
+navigate to a view by its id number.  The {substr} part is used for
+completion (can be any number of words, only leading whitespace is
+removed).  The view will become the current one by switching to the
+corresponding tab and pane.  Matching is case sensitive substring search
+in view title or its full current path (with `~` expanded regardless of
+any settings).
+.TP
+.BI ":wingo {substr}"
+this form navigates to a view that is uniquely identified by {substr} or
+errors.  The form will not be used if the first word of {substr} is a
+valid number that starts with a digit (i.e., no `+` or `-` in front).
 .TP
 .BI "                                         :winrun"
 .TP
